[package]
name = "webodm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
image = "0.23"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"

actix-web = "4.9.0"
actix-cors = "0.6.5"
actix-multipart = "0.4.0"
futures-util = "0.3"
futures = "0.3.30"
tempfile = "3.12.0"



